# intake-dynamodb

./: .gitattributes  .gitignore  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
conda/: meta.yaml
docs/: environment.yml
docs/source/: api.rst  conf.py  index.rst  quickstart.rst
intake_dynamodb/: __init__.py  _version.py  dynamodb.py  helper.py
tests/: conftest.py  test.yaml  test_catalog.py  test_dynamodb_catalog.py
tests/AWSDynamoDB/0123456789-abcdefgh/: manifest-files.json  manifest-summary.json
tests/AWSDynamoDB/0123456789-abcdefgh/data/: abcdefghijklmnopqrstuvwxyz.json
tests/AWSDynamoDB/0123456789-abcdefgh2/: manifest-files.json  manifest-summary.json
tests/AWSDynamoDB/0123456789-abcdefgh2/data/: abcdefghijklmnopqrstuvwxyz.json  abcdefghijklmnopqrstuvwxyz2.json
tests/data/: catalog.yaml
